--- a/src/posts/2016-08-01-tooling.md
+++ b/src/posts/2016-08-01-tooling.md
@@ -1,8 +1,9 @@
 ---
-layout: post
+layout: layouts/post.njk
 title: We aren't our tools
 tags: tools, workflow, work, teams
 category: work
+date: 2016-08-01
 ---
 
 > As developers we are often compelled either by a self-initiated, driving curiosity, or from the persistent, corporate anxiety to innovate rather than consolidate — in a bid to service or even manufacture ever-more nuanced needs in our clients.
