--- a/src/404.md
+++ b/src/404.md
@@ -1,5 +1,5 @@
 ---
-layout: layouts/home.njk
+layout: layouts/base.njk
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
@@ -13,6 +13,6 @@ Read more: https://www.11ty.io/docs/quicktips/not-found/
 
 This will work for both GitHub pages and Netlify:
 
-* https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/
-* https://www.netlify.com/docs/redirects/#custom-404
-{% endcomment %}
+- https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/
+- https://www.netlify.com/docs/redirects/#custom-404
+  {% endcomment %}
